tests/lean/antiquotRecovery.lean.expected.out
antiquotRecovery.lean:5:17-5:19: error: unexpected token '$'; expected ')'
